--- a/.github/workflows/script/Dockerfile
+++ b/.github/workflows/script/Dockerfile
@@ -9,14 +9,14 @@ COPY . /emqx-rel
 
 WORKDIR /emqx-rel
 
-RUN echo "========================= build ${EMQX_NAME} =========================" \
-    && make ${EMQX_NAME} \
-    && pkg=${EMQX_NAME}-${SYSTEM}-${EMQX_DEPS_DEFAULT_VSN#v}-$(uname -m).zip \
-    && cd _build/${EMQX_NAME}/rel/ \
-    && zip -rq $pkg emqx \
-    && mkdir -p /emqx-rel/_packages/${EMQX_NAME} \
-    && mv $pkg /emqx-rel/_packages/${EMQX_NAME} \
-    && cd -
+# RUN echo "========================= build ${EMQX_NAME} =========================" \
+#     && make ${EMQX_NAME} \
+#     && pkg=${EMQX_NAME}-${SYSTEM}-${EMQX_DEPS_DEFAULT_VSN#v}-$(uname -m).zip \
+#     && cd _build/${EMQX_NAME}/rel/ \
+#     && zip -rq $pkg emqx \
+#     && mkdir -p /emqx-rel/_packages/${EMQX_NAME} \
+#     && mv $pkg /emqx-rel/_packages/${EMQX_NAME} \
+#     && cd -
 
 RUN make ${EMQX_NAME}-pkg
 
