feature(relup): create bin/emqx-{version} for release upgrade

--- a/rebar.config
+++ b/rebar.config
@@ -89,6 +89,7 @@
     {mkdir,"data/scripts"},
     {template,"bin/emqx_env","bin/emqx_env"},
     {template,"bin/emqx","bin/emqx"},
+    {template,"bin/emqx","bin/emqx-{{rel_vsn}}"}, %% for relup
     {template,"bin/emqx_ctl","bin/emqx_ctl"},
     {template,"bin/emqx.cmd","bin/emqx.cmd"},
     {template,"bin/emqx_ctl.cmd","bin/emqx_ctl.cmd"},
