feature(relup): update relup_helper hooks

--- a/rebar.config
+++ b/rebar.config
@@ -166,7 +166,9 @@
 ]}.
 
 {provider_hooks, [
-    {pre, [{relup, {default, relup_helper}}]}
+    {pre,  [{release, {relup_helper, gen_appups}}]},
+    {post, [{release, {relup_helper, otp_vsn}},
+            {release, {relup_helper, untar}}]}
 ]}.
 
 {post_hooks,
