chore: format makefile

--- a/.ci/paho_tests/Makefile
+++ b/.ci/paho_tests/Makefile
@@ -2,14 +2,11 @@
 TARGET ?= emqx/emqx
 EMQX_NAME = $(subst emqx/,,$(TARGET))
 
-## versioning
-EMQX_DEPS_DEFAULT_VSN ?= ""
-ifeq ($(EMQX_DEPS_DEFAULT_VSN), )
-	BUILD_VERSION := $(patsubst v%,%,$(patsubst e%,%,$(shell git describe --tags --always)))
-else ifeq ($(EMQX_DEPS_DEFAULT_VSN), "")
-	BUILD_VERSION := $(patsubst v%,%,$(patsubst e%,%,$(shell git describe --tags --always)))
+export EMQX_DEPS_DEFAULT_VSN ?= $(shell ../../get-lastest-tag.escript ref)
+ifneq ($(shell echo $(EMQX_DEPS_DEFAULT_VSN) | grep -oE "^[ev0-9]+\.[0-9]+(\.[0-9]+)?"),)
+	export PKG_VSN := $(patsubst v%,%,$(patsubst e%,%,$(EMQX_DEPS_DEFAULT_VSN)))
 else
-	BUILD_VERSION := $(patsubst v%,%,$(patsubst e%,%,$(EMQX_DEPS_DEFAULT_VSN)))
+	export PKG_VSN := $(patsubst v%,%,$(shell ../../get-lastest-tag.escript tag))
 endif
 
 .PHONY: all
@@ -29,7 +26,7 @@ endef
 
 .PHONY: create_container
 create_container: clean
-	@sed -i "/IMAGE=/c\IMAGE=$(TARGET):$(BUILD_VERSION)" .env
+	@sed -i "/IMAGE=/c\IMAGE=$(TARGET):$(PKG_VSN)" .env
 
 	@docker-compose -p paho_test up -d
 	
