--- a/.github/workflows/build_cross_packages.yaml
+++ b/.github/workflows/build_cross_packages.yaml
@@ -149,16 +149,23 @@ jobs:
            tags=$(git tag -l "$(echo $version | grep -oE "^[ev0-9]+\.[0-9]").*" |grep -v "$version")
            for tag in ${tags[@]};do
              for arch in x86_64 aarch64; do
+                mkdir -p tmp/relup_packages/emqx
+                cd tmp/packages/emqx
                 if [ ! -z "$(echo  $(curl -I -m 10 -o /dev/null -s -w %{http_code} https://www.emqx.io/downloads/broker/${tag#[e|v]}/emqx-$SYSTEM-${tag#[e|v]}-$arch.zip) | grep -oE "^[23]+")" ];then
                   wget https://www.emqx.io/downloads/broker/${tag#[e|v]}/emqx-$SYSTEM-${tag#[e|v]}-$arch.zip
                   wget https://www.emqx.io/downloads/broker/${tag#[e|v]}/emqx-$SYSTEM-${tag#[e|v]}-$arch.zip.sha256
                   echo "$(cat emqx-$SYSTEM-${tag#[e|v]}-$arch.zip.sha256) emqx-$SYSTEM-${tag#[e|v]}-$arch.zip" | sha256sum -c || exit 1
                 fi
+                cd -
+
+                mkdir -p tmp/relup_packages/emqx-edge
+                cd tmp/packages/emqx-edge
                 if [ ! -z "$(echo  $(curl -I -m 10 -o /dev/null -s -w %{http_code} https://www.emqx.io/downloads/edge/${tag#[e|v]}/emqx-edge-$SYSTEM-${tag#[e|v]}-$arch.zip) | grep -oE "^[23]+")" ];then
                   wget https://www.emqx.io/downloads/edge/${tag#[e|v]}/emqx-edge-$SYSTEM-${tag#[e|v]}-$arch.zip
                   wget https://www.emqx.io/downloads/edge/${tag#[e|v]}/emqx-edge-$SYSTEM-${tag#[e|v]}-$arch.zip.sha256
                   echo "$(cat emqx-edge-$SYSTEM-${tag#[e|v]}-$arch.zip.sha256) emqx-edge-$SYSTEM-${tag#[e|v]}-$arch.zip" | sha256sum -c || exit 1
                 fi
+                cd -
              done
            done
         fi
