--- a/.github/workflows/run_paho_tests.yaml
+++ b/.github/workflows/run_paho_tests.yaml
@@ -1,10 +1,13 @@
 name: Run paho tests
 
 on: 
-  pull_request:
   push:
     tags:
       - v*
+  workflow_dispatch:
+    inputs:
+      version:
+        required: true
   repository_dispatch:
     types: [run_tests]
 
@@ -22,16 +25,18 @@ jobs:
         - uses: actions/checkout@v1
         - name: get deps
           run: |
-            if [ ${{ github.event_name}} = 'repository_dispatch' ]; then version=${{ github.event.client_payload.version }}; else version=$(echo ${{ github.ref }} | sed -r  "s ^refs/heads/|^refs/tags/(.*) \1 g"); fi
-            if [ ! -z $(echo $version | grep -oE "^[ev0-9]+\.[0-9]+(\.[0-9]+)?") ]; then deps_version=$version; else deps_version=""; fi
-
-            echo "::set-env name=EMQX_DEPS_DEFAULT_VSN::$deps_version"
-            echo "::set-env name=version::$version"
+            if [ ${{ github.event_name}} = 'repository_dispatch' ]; then
+                version=${{ github.event.client_payload.version }}
+            elif [ ${{ github.event_name}} = 'workflow_dispatch' ]; then
+                version=${{ github.event.inputs.version }}
+            else
+                version=$(echo ${{ github.ref }} | sed -r  "s ^refs/heads/|^refs/tags/(.*) \1 g")
+            fi
 
             docker run -i --rm \
               -e GITHUB_RUN_ID=$GITHUB_RUN_ID \
               -e GITHUB_REF=$GITHUB_REF \
-              -e EMQX_DEPS_DEFAULT_VSN=$deps_version \
+              -e EMQX_DEPS_DEFAULT_VSN=$version \
               -v $(pwd):/emqx-rel \
               emqx/build-env:erl22.3-debian10 \
               bash -c "make -C /emqx-rel deps-emqx"
