--- a/.github/workflows/build_cross_packages.yaml
+++ b/.github/workflows/build_cross_packages.yaml
@@ -28,7 +28,7 @@ jobs:
         if ($version -match "v[0-9]+\.[0-9]+(\.[0-9]+)?") {
           $env:EMQX_DEPS_DEFAULT_VSN = $version
           $regex = "[0-9]+\.[0-9]+(\.[0-9]+)?-(alpha|beta|rc)\.[0-9]"
-          $pkg_name = "emqx-windows-$([regex]::matches($version, $regex).value)).zip"
+          $pkg_name = "emqx-windows-$([regex]::matches($version, $regex).value).zip"
           }
         else {
           $env:EMQX_DEPS_DEFAULT_VSN = ""
